--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,9 +13,10 @@ services:
       - 5433:5432
     volumes:
       - pgdata:/var/lib/postgresql/data
-      - ./user_db.sql:/ ./user_db.sql
+#      - ./user_db.sql:/docker-entrypoint-initdb.d/user_db.sql
+#      - ./user_db.sql:/user_db.sql
     healthcheck:
-      test: [ "CMD", "pg_isready", "-U", "fastapi" ]
+      test: [ "CMD", "pg_isready", "-U", "postgres" ]
       interval: 10s
       retries: 5
       timeout: 3s
@@ -26,6 +27,7 @@ services:
     build:
       context: .
     container_name: fastapi_app
+    command: ./app.sh
     ports:
       - 8080:8000
     env_file:
@@ -43,15 +45,16 @@ services:
         condition: service_healthy
     volumes:
       - .:/app
-    command: alembic upgrade head
+    command: ./alembic.sh
 
   tests:
     build:
      context: .
     container_name: tests_db
     depends_on:
+      - web
       - alembic
-    command: python -m unittest test_main.py
+    command: ./tests.sh
 
 
 volumes:
